--- a/src/pages/saved/saved.html
+++ b/src/pages/saved/saved.html
@@ -58,7 +58,7 @@
 
   <div class="results">
     <p class="results__text">Сохранённые статьи</p>
-    <h1 class="results__header">Грета, у вас <span id="number">0</span> сохранённых статей</h1>
+    <h1 class="results__header"><span id="name">Грета</span>, у вас <span id="number">0</span> сохранённых статей</h1>
     <p class="results__theme">
       <span class="results__span"></span>
        <span class="results__span"></span>
